--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ html {
 }
 a {
   text-decoration: none;
+  font-weight: 500;
+    letter-spacing: 0.1em;
 }
 ul {
   list-style-type: none;
@@ -22,7 +24,7 @@ h4 {
 	font-size: 4vw;
 }
 h5 {
-	font-size: 3vw;
+	font-size: 3.5vw;
 	color: #E62C03;
 }
 .swiper {
@@ -51,7 +53,7 @@ h5 {
   text-align: center;
 }
 .tg-logo {
-  max-width: 48px;
+  max-width: 54px;
 }
 .container-main {
 	margin: 0 15px;
@@ -100,6 +102,8 @@ h5 {
   white-space: nowrap;
   border: 0;
   transition: box-shadow .2s;
+  display: flex;
+  ALIGN-ITEMS: center;
 }
 
 .button-37:hover {
@@ -148,8 +152,14 @@ footer {
 		}
 	}
 } */
-/* @media screen and (max-width: 767.99px) {
-	.swiper {
-  max-width: 250px;
+@media screen and (max-width: 767.99px) {
+  .menu__list {
+    gap: 16px;
 }
-} */
+.container {
+  gap: 10px;
+}
+.button-37 {
+  height: 30px;
+}
+}
