--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 html {
   font-family: "Tektur", sans-serif;
   background-color: #00000a;
+  scroll-behavior: smooth;
 }
 a {
   text-decoration: none;
