--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h4 {
   font-size: 2vw;
 }
 .swiper {
-  width: 43vw;
+  width: 30vw;
 }
 #header {
   background-color: #00000a;
@@ -66,7 +66,7 @@ h4 {
 
 .item-row {
 	display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 16px;
 }
 .item {
@@ -293,5 +293,12 @@ footer {
   padding: 5px 8px;
   margin: 0 5px;
 }
-
+}
+@media screen and (max-width: 1024.99px) {
+.item-row {
+  grid-template-columns: repeat(2, 1fr);
+}
+.swiper {
+  width: 43vw;
+}
 }
