--- a/style.css
+++ b/style.css
@@ -22,18 +22,18 @@ img {
   height: auto;
 }
 h2 {
-	font-size: 4vw;
+	font-size: 2vw;
   margin-bottom: 10px;
 }
 h3 {
-	font-size: 3.5vw;
+	font-size: 2vw;
 	color: #E62C03;
 }
 h4 {
-  font-size: 2vw;
+  font-size: 1.1vw;
 }
 .swiper {
-  width: 30vw;
+  width: 20vw;
 }
 #header {
   background-color: #00000a;
@@ -66,7 +66,7 @@ h4 {
 
 .item-row {
 	display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 16px;
 }
 .item {
@@ -258,7 +258,41 @@ footer {
   overflow: hidden;
   margin: 0;
   padding: 0;
-}        
+}      
+@media screen and (max-width: 1199.99px) {
+  .item-row {
+  grid-template-columns: repeat(3, 1fr);
+}
+.swiper {
+  width: 30vw;
+}
+h2 {
+	font-size: 2.5vw;
+}
+h3 {
+	font-size: 2.5vw;
+}
+h4 {
+  font-size: 1.5vw;
+}
+}  
+@media screen and (max-width: 1024.99px) {
+.item-row {
+  grid-template-columns: repeat(2, 1fr);
+}
+.swiper {
+  width: 43vw;
+}
+h2 {
+	font-size: 4vw;
+}
+h3 {
+	font-size: 3.5vw;
+}
+h4 {
+  font-size: 2vw;
+}
+}
 @media screen and (max-width: 767.99px) {
   .menu__list {
     gap: 16px;
@@ -292,13 +326,5 @@ footer {
 .filter-btn {
   padding: 5px 8px;
   margin: 0 5px;
-}
-}
-@media screen and (max-width: 1024.99px) {
-.item-row {
-  grid-template-columns: repeat(2, 1fr);
-}
-.swiper {
-  width: 43vw;
 }
 }
