--- a/style.css
+++ b/style.css
@@ -22,19 +22,23 @@ img {
   height: auto;
 }
 h2 {
-  font-size: 2vw;
-  margin-bottom: 10px;
+  font-size: 1.9vw;
+  margin-top: 32px;
+  margin-bottom: 24px;
 }
 h3 {
-  font-size: 2vw;
-  color: #e62c03;
+  font-size: 1.5vw;
 }
 h4 {
   font-size: 1.1vw;
 }
 .swiper {
-  width: 20vw;
+  width: 18vw;
+  .swiper-pagination-bullet-active {
+  background: #f03816;;
 }
+}
+
 #header {
   background-color: #00000a;
   border-bottom: 1px solid #b1b1b1;
@@ -70,35 +74,45 @@ h4 {
   gap: 16px;
 }
 .item {
-  border: 1px solid #b1b1b1;
-  border-radius: 25px;
+  border: 1px solid #333;
+  border-radius: 40px;
   text-align: center;
   align-items: center;
-  padding: 5px;
+  padding: 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   img {
     /* width: 100%; */
-    border-radius: 25px;
+    border-radius: 34px;
   }
 }
 .option-wrapper {
   /* border: 1px solid #b1b1b1;
   border-radius: 25px; */
-  padding: 10px;
   display: flex;
   flex-direction: column;
   text-align: left;
+  margin-bottom: 40px;
+  gap: 4px;
 }
 .item_option {
-  color: #fee607;
+  color: #817E7E;
 }
 .price-wrapper {
   display: flex;
   gap: 10px;
   justify-content: space-around;
   align-items: center;
+
+  border-radius: 200px;
+padding: 6px 6px 6px 12px;
+background: #1e1e1e;
+height: 68px;
+width: 100%;
+  .button-37 {
+    margin-left: auto;
+  }
 }
 .button-37 {
   background-color: initial;
@@ -107,7 +121,6 @@ h4 {
   box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
   color: #ffffff;
   cursor: pointer;
-  display: inline-block;
   height: 40px;
   line-height: 40px;
   outline: 0;
@@ -125,6 +138,9 @@ h4 {
   transition: box-shadow 0.2s;
   display: flex;
   align-items: center;
+  border-radius: 200px;
+padding: 16px 24px;
+height: 56px;
 }
 
 .button-37:hover {
@@ -209,42 +225,54 @@ textarea {
 }
 
 button {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 15px;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
   background-color: initial;
   background-image: linear-gradient(-180deg, #ff7e31, #e62c03);
-  border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
   color: #ffffff;
   font-family: "Tektur", sans-serif;
   height: 40px;
   padding: 0 20px;
+  border-radius: 200px;
+padding: 16px 24px;
+height: 56px;
 }
 
 .filter-buttons {
-  margin: 20px 0;
+  border-radius: 200px;
+background: #202020;
+max-width: 450px;
+width: 100%;
+height: 70px;
+display: flex;
+align-items: center;
   text-align: center;
+  justify-content: center;
+  margin-bottom: 2%;
 }
 
 .filter-btn {
-  padding: 8px 16px;
+  padding: 14px 24px;
   margin: 0 5px;
   cursor: pointer;
-  background: #45a049;
-  border-radius: 4px;
-  color: white;
+  border-radius: 200px;
+  color: #b9b9b9;
   font-family: "Tektur", sans-serif;
+  background: #202020;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  font-weight: 600;
+  height: 63px;
+  font-size: 26px;
 }
 
 .filter-btn.active {
-  background: #007bff;
-  color: white;
-  border-color: #007bff;
+  background: white;
+  color: black;
 }
 
 .item {
@@ -258,31 +286,63 @@ button {
   margin: 0;
   padding: 0;
 }
+@media screen and (max-width: 1470.99px) {
+  .item-row {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .item {
+    h2 {
+      font-size: 2.5vw;
+    }
+    h3 {
+      font-size: 2vw;
+    }
+  }
+  .swiper {
+    width: 24vw;
+  }
+  .price-wrapper {
+    h3 {
+      margin-left: 15px;
+    }
+  }
+
+}
 @media screen and (max-width: 1199.99px) {
   .item-row {
     grid-template-columns: repeat(3, 1fr);
   }
   .swiper {
-    width: 30vw;
+    width: 27vw;
   }
   h2 {
     font-size: 2.5vw;
   }
   h3 {
-    font-size: 2.5vw;
+    font-size: 2.4vw;
   }
   h4 {
     font-size: 1.5vw;
   }
+  .item {
+    padding: 20px;
+  }
+      .price-wrapper {
+        h3 {
+            margin-left: 0;
+        }
+    }
+  
 }
 @media screen and (max-width: 1024.99px) {
   .item-row {
     grid-template-columns: repeat(2, 1fr);
   }
   .swiper {
-    width: 43vw;
+    width: 41vw;
   }
-  h2 {
+  .item {
+    h2 {
     font-size: 4vw;
   }
   h3 {
@@ -291,6 +351,13 @@ button {
   h4 {
     font-size: 2vw;
   }
+    }
+  
+  .price-wrapper {
+        h3 {
+            margin-left: 15px;
+        }
+    }
 }
 @media screen and (max-width: 767.99px) {
   .menu__list {
@@ -299,13 +366,35 @@ button {
   .container {
     gap: 10px;
   }
-  .button-37 , button {
-    height: 30px;
+  .swiper {
+    width: 38vw;
   }
+  .item {
+    h2 {
+      margin: 16px 0;
+    }
+    .option-wrapper {
+      margin-bottom: 16px;
+    }
+  }
+  .price-wrapper {
+    height: 58px;
+        h3 {
+            margin-left: 0;
+            font-size: 3vw;
+        }
+    }
+    .button-37 {
+      padding: 4px 10px;
+    height: 45px;
+    }
 }
 @media screen and (max-width: 575.99px) {
   h4 {
     font-size: 2.3vw;
+  }
+  .item {
+    padding: 10px;
   }
   .item-row {
     gap: 8px;
@@ -316,17 +405,50 @@ button {
   .price-wrapper {
     gap: 5px;
     margin: 10px auto;
+    h3 {
+      font-size: 3.2vw;
+    }
   }
-  .button-37  {
-    height: 25px;
-    padding: 0 5px;
+  .swiper {
+    width: 42vw;
   }
   .filter-buttons {
-    margin: 15px 0;
+    max-width: 325px;
+    height: 52px;
+    .filter-btn {
+      font-size: 18px;
+      padding: 14px 16px;
+      height: 40px;
+    }
   }
+  .button-37 {
+      padding: 4px 8px;
+    height: 38px;
+    }
 
-  .filter-btn {
-    padding: 5px 8px;
-    margin: 0 5px;
+}
+@media screen and (max-width: 481.99px) {
+  .item {
+    border-radius: 22px;
+    img  {
+      border-radius: 25px;
+    }
+  }
+.swiper {
+    width: 37vw;
+  }
+  .price-wrapper {
+    height: 31px;
+    gap: 0;
+    margin: 5px auto;
+    h3 {
+      font-size: 3vw;
+    }
+    .button-37 {
+      padding: 0 5px;
+    height: 25px;
+    font-size: 10px;
+    }
   }
 }
+
