--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ a {
 ul {
   list-style-type: none;
 }
-img {
+img,
+svg {
   max-width: 100%;
   height: auto;
 }
@@ -32,11 +33,17 @@ h3 {
 h4 {
   font-size: 1.1vw;
 }
+.title-category {
+  font-size: 4vw;
+}
 .swiper {
   width: 18vw;
+  .swiper-pagination-bullet {
+    background: #808080;
+  }
   .swiper-pagination-bullet-active {
-  background: #f03816;;
-}
+    background: #f03816;
+  }
 }
 
 #header {
@@ -85,7 +92,7 @@ h4 {
   img {
     /* width: 100%; */
     border-radius: 34px;
-    background-color: #1a1919;
+    background-color: #121212;
   }
 }
 .option-wrapper {
@@ -98,7 +105,7 @@ h4 {
   gap: 4px;
 }
 .item_option {
-  color: #817E7E;
+  color: #817e7e;
 }
 .price-wrapper {
   display: flex;
@@ -107,10 +114,10 @@ h4 {
   align-items: center;
 
   border-radius: 200px;
-padding: 6px 6px 6px 12px;
-background: #1e1e1e;
-height: 68px;
-width: 100%;
+  padding: 6px 6px 6px 12px;
+  background: #1e1e1e;
+  height: 68px;
+  width: 100%;
   .button-37 {
     margin-left: auto;
   }
@@ -140,8 +147,8 @@ width: 100%;
   display: flex;
   align-items: center;
   border-radius: 200px;
-padding: 16px 24px;
-height: 56px;
+  padding: 16px 24px;
+  height: 56px;
 }
 
 .button-37:hover {
@@ -240,18 +247,18 @@ button {
   height: 40px;
   padding: 0 20px;
   border-radius: 200px;
-padding: 16px 24px;
-height: 56px;
+  padding: 16px 24px;
+  height: 56px;
 }
 
 .filter-buttons {
   border-radius: 200px;
-background: #202020;
-max-width: 450px;
-width: 100%;
-height: 70px;
-display: flex;
-align-items: center;
+  background: #202020;
+  max-width: 450px;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
   text-align: center;
   justify-content: center;
   margin-bottom: 2%;
@@ -290,6 +297,64 @@ align-items: center;
   margin: 0;
   padding: 0;
 }
+.about {
+  margin-top: 25px;
+  img {
+    max-width: 461px;
+    width: 23vw;
+    height: 100%;
+  }
+  h2 {
+    margin-top: 8px;
+    margin-bottom: 16px;
+  }
+  h4 {
+    color: #f03816;
+  }
+  p {
+    color: #817e7e;
+    font-size: 1.5vw;
+  }
+  .text-wrapper {
+    max-width: 714px;
+    max-width: 60%;
+  }
+  .about-us {
+    display: flex;
+    justify-content: space-around;
+    gap: 25px;
+  }
+  .steps-title {
+    text-align: center;
+    h2 {
+      margin-top: 8px;
+    }
+  }
+  .steps {
+    h2 {
+      margin: 0;
+      color: #474646;
+      font-weight: 400;
+    }
+    .step {
+      max-width: 34vw;
+      margin-bottom: 30px;
+      border-left: 2px solid red;
+      padding-left: 1vw;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .step:nth-child(2) {
+      margin-left: 35%;
+    }
+
+    .step:nth-child(3) {
+      margin-left: 70%;
+    }
+  }
+}
+
 @media screen and (max-width: 1470.99px) {
   .item-row {
     grid-template-columns: repeat(3, 1fr);
@@ -310,7 +375,6 @@ align-items: center;
       margin-left: 15px;
     }
   }
-
 }
 @media screen and (max-width: 1199.99px) {
   .item-row {
@@ -331,12 +395,11 @@ align-items: center;
   .item {
     padding: 20px;
   }
-      .price-wrapper {
-        h3 {
-            margin-left: 0;
-        }
+  .price-wrapper {
+    h3 {
+      margin-left: 0;
     }
-  
+  }
 }
 @media screen and (max-width: 1024.99px) {
   .item-row {
@@ -347,21 +410,21 @@ align-items: center;
   }
   .item {
     h2 {
-    font-size: 4vw;
-  }
-  h3 {
-    font-size: 3.5vw;
-  }
-  h4 {
-    font-size: 2vw;
-  }
+      font-size: 4vw;
     }
-  
+    h3 {
+      font-size: 3.5vw;
+    }
+    h4 {
+      font-size: 2vw;
+    }
+  }
+
   .price-wrapper {
-        h3 {
-            margin-left: 15px;
-        }
+    h3 {
+      margin-left: 15px;
     }
+  }
 }
 @media screen and (max-width: 767.99px) {
   .menu__list {
@@ -383,15 +446,24 @@ align-items: center;
   }
   .price-wrapper {
     height: 58px;
-        h3 {
-            margin-left: 0;
-            font-size: 3vw;
-        }
+    h3 {
+      margin-left: 0;
+      font-size: 3vw;
     }
-    .button-37 , button {
-      padding: 4px 10px;
+  }
+  .button-37,
+  button {
+    padding: 4px 10px;
     height: 45px;
+  }
+  .about {
+    p {
+      font-size: 2.2vw;
     }
+    .about-us {
+      gap: 5px;
+    }
+  }
 }
 @media screen and (max-width: 575.99px) {
   h4 {
@@ -425,27 +497,53 @@ align-items: center;
       height: 40px;
     }
   }
-  .button-37 , button {
-      padding: 4px 8px;
+  .button-37,
+  button {
+    padding: 4px 8px;
     height: 38px;
-    }
-    .modal {
-      label {
-        font-size: 16px;
-      }
-      h2 {
-    font-size: 18px;
   }
+  .modal {
+    label {
+      font-size: 16px;
     }
+    h2 {
+      font-size: 18px;
+    }
+  }
+  .about {
+    .about-us {
+      justify-content: space-between;
+    }
+    h2 {
+      font-size: 3vw;
+    }
+    p {
+      font-size: 2.4vw;
+      margin-top: 0;
+    }
+    img {
+      width: 30vw;
+    }
+    .steps {
+      .step:nth-child(2) {
+      margin-left: 30%;
+    }
+
+    .step:nth-child(3) {
+      margin-left: 60%;
+    }
+    }
+    
+  }
 }
 @media screen and (max-width: 481.99px) {
   .item {
     border-radius: 22px;
-    img  {
+    img {
       border-radius: 25px;
     }
   }
-.swiper {
+  .swiper {
     width: 37vw;
   }
   .price-wrapper {
@@ -455,24 +553,24 @@ align-items: center;
     h3 {
       font-size: 3vw;
     }
-    .button-37 , button {
+    .button-37,
+    button {
       padding: 0 5px;
-    height: 25px;
-    font-size: 10px;
+      height: 25px;
+      font-size: 10px;
     }
   }
   .modal {
     .modal-content {
       width: 80%;
     }
-      label {
-        font-size: 14px;
-      }
-      h2 {
-    font-size: 18px;
-    margin: 0;
-    margin-bottom: 15px;
-  }
+    label {
+      font-size: 14px;
     }
+    h2 {
+      font-size: 18px;
+      margin: 0;
+      margin-bottom: 15px;
+    }
+  }
 }
-
