--- a/style.css
+++ b/style.css
@@ -10,9 +10,22 @@ html {
   scroll-behavior: smooth;
 }
 body {
-    max-width: 1920px;
-    margin: 0 auto;
-    overflow-x: hidden;
+  max-width: 1920px;
+  margin: 0 auto;
+  overflow-x: hidden;
+  position: relative;
+  width: 100%;
+  padding: 0 235px;
+}
+body::after {
+  content: "";
+    position: absolute;
+    top: -13%;
+    left: 0;
+    width: 100%;
+    height: 200vh;
+    background: url(/src/hero-back.svg) 16% center / cover no-repeat;
+    z-index: -1;
 }
 a {
   text-decoration: none;
@@ -28,7 +41,7 @@ svg {
   height: auto;
 }
 h1 {
-  font-size: 4.7vw;
+  font-size: 90px;
 }
 h2 {
   font-size: 1.9vw;
@@ -45,7 +58,7 @@ h4 {
   font-size: 4vw;
 }
 .swiper {
-  width: 18vw;
+  width: 300px;
   .swiper-pagination-bullet {
     background: #808080;
   }
@@ -70,35 +83,26 @@ h4 {
   justify-content: center;
   align-items: center;
   text-align: center;
-  position: relative;
+  p {
+    font-size: 22px;
+  }
   h1 {
     max-width: 950px;
     margin-bottom: 32px;
   }
-
-}
-.hero::after {
-  content: "";
-        position: absolute;
-        background: center/contain no-repeat;
-        z-index: -1;
-        width: 1890px;
-        height: 1545px;
-        background-image: url(/src/hero-back.svg);
-        
 }
 .buttonTG-hero {
   margin-top: 48px;
   border-radius: 1000px;
-padding: 8px 5px 8px 32px;
-background: white;
-height: 55px;
-color: black;
-display: inline-flex;
+  padding: 8px 5px 8px 32px;
+  background: white;
+  height: 55px;
+  color: black;
+  display: inline-flex;
   align-items: center;
   gap: 15px;
   font-size: 20px;
-svg {
+  svg {
     width: 48px;
     height: 48px;
   }
@@ -129,7 +133,7 @@ svg {
 
 .item-row {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 16px;
 }
 .item {
@@ -140,7 +144,6 @@ svg {
   padding: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   img {
     /* width: 100%; */
     border-radius: 34px;
@@ -164,7 +167,7 @@ svg {
   gap: 10px;
   justify-content: space-around;
   align-items: center;
-
+  margin-top: auto;
   border-radius: 200px;
   padding: 6px 6px 6px 12px;
   background: #1e1e1e;
@@ -176,7 +179,7 @@ svg {
 }
 .buttonTG {
   background-color: initial;
-  background-image: linear-gradient(156deg, #f01616 0%, #f7710b 100%);;
+  background-image: linear-gradient(156deg, #f01616 0%, #f7710b 100%);
   border-radius: 200px;
   padding: 12px 24px 12px 32px;
   display: inline-flex;
@@ -416,12 +419,21 @@ button {
     }
   }
 }
+@media screen and (max-width: 1680.99px) { 
+  body {
+    padding: 0 150px;
+  }
+  .swiper {
+    width: 300px;
+  }
+}
 
 @media screen and (max-width: 1470.99px) {
   .item-row {
     grid-template-columns: repeat(3, 1fr);
   }
   .item {
+    padding: 20px;
     h2 {
       font-size: 2.5vw;
     }
@@ -430,20 +442,24 @@ button {
     }
   }
   .swiper {
-    width: 24vw;
+    width: 240px;
   }
   .price-wrapper {
+    margin-top: auto;
     h3 {
       margin-left: 15px;
     }
   }
 }
 @media screen and (max-width: 1199.99px) {
+  body {
+    padding: 0 50px;
+  }
   .item-row {
     grid-template-columns: repeat(3, 1fr);
   }
   .swiper {
-    width: 27vw;
+    width: 23vw;
   }
   h2 {
     font-size: 2.5vw;
@@ -458,12 +474,27 @@ button {
     padding: 20px;
   }
   .price-wrapper {
+    margin-top: auto;
     h3 {
       margin-left: 0;
     }
   }
 }
 @media screen and (max-width: 1024.99px) {
+    .hero {
+    
+    h1 {
+      font-size: 67px;
+    }
+  }
+  body {
+    padding: 0;
+  }
+  body::after {
+    top: -11%;
+    height: 143vh;
+    background: url(/src/hero-back.svg) 20% center / cover no-repeat;
+}
   .item-row {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -483,12 +514,17 @@ button {
   }
 
   .price-wrapper {
+    margin-top: auto;
     h3 {
       margin-left: 15px;
     }
   }
 }
 @media screen and (max-width: 767.99px) {
+
+  .menu {
+    display: none;
+  }
   .menu__list {
     gap: 16px;
   }
@@ -508,6 +544,7 @@ button {
   }
   .price-wrapper {
     height: 58px;
+    margin-top: auto;
     h3 {
       margin-left: 0;
       font-size: 3vw;
@@ -526,8 +563,22 @@ button {
       gap: 5px;
     }
   }
+  body::after {
+    top: -5%;
+    height: 72vh;
+    background: url(/src/hero-back.svg) 24% center / cover no-repeat;
+}
 }
 @media screen and (max-width: 575.99px) {
+  body::after {
+        top: -9%;
+        height: 107vh;
+        background: url(/src/hero-back.svg) 25% center / cover no-repeat;
+    }
+  .buttonTG {
+    padding: 8px 12px 8px 12px;
+    font-size: 14px;
+  }
   h4 {
     font-size: 2.3vw;
   }
@@ -542,7 +593,7 @@ button {
   }
   .price-wrapper {
     gap: 5px;
-    margin: 10px auto;
+    margin-top: auto;
     h3 {
       font-size: 3.2vw;
     }
@@ -588,14 +639,13 @@ button {
     }
     .steps {
       .step:nth-child(2) {
-      margin-left: 30%;
-    }
+        margin-left: 30%;
+      }
 
-    .step:nth-child(3) {
-      margin-left: 60%;
+      .step:nth-child(3) {
+        margin-left: 60%;
+      }
     }
-    }
-    
   }
 }
 @media screen and (max-width: 481.99px) {
@@ -611,7 +661,7 @@ button {
   .price-wrapper {
     height: 31px;
     gap: 0;
-    margin: 5px auto;
+    margin-top: auto;
     h3 {
       font-size: 3vw;
     }
