--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ body::after {
     left: 0;
     width: 100%;
     height: 200vh;
-    background: url(/src/hero-back.svg) 16% center / cover no-repeat;
+    background: url('./src/hero-back.svg') 16% center / cover no-repeat;
     z-index: -1;
+    height: -webkit-fill-available; 
 }
 a {
   text-decoration: none;
